[package]
name = "tar-get"
version = "0.4.1"
edition = "2024"
description = "Serialize a vector of objects to disk, then start deserilizing them in constant time."

[dependencies]
serde = "1"
thiserror = "2"

[dev-dependencies]
bincode = "1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.20.0", features = ["v4"] }
